# coding-challenge

./: .gitignore  LICENSE  README.md  new-ce3.sh  shell.nix
calculator/: README.md
calculator/rust/src/: main.rs
calculator/scala/: build.sbt  calc  make
calculator/scala/project/: plugins.sbt
calculator/scala/src/main/scala/dodropin/: Arg.scala  Bracket.scala  BracketParser.scala  Brackets.scala  BracketsParser.scala  Calc.scala  CalcOps.scala  Op.scala  OpApplicable.scala  OpParser.scala  Ops.scala  OpsParser.scala  Precedence.scala  Stacks.scala  State.scala
connect-four/: README.md
connect-four/rust/: .envrc  Cargo.toml
connect-four/rust/src/: color.rs  game.rs  main.rs
connect-four/rust/src/board/: bounded_cell.rs  cell.rs  cell_error.rs  direction.rs  mod.rs  player.rs
connect-four/rust/src/rules/: mod.rs  move_error.rs
connect-four/scala/: build.sbt
connect-four/scala/project/: plugins.sbt
dns-resolver/rust/: shell.nix
huffman-encoding/scala/: shell.nix
load-balancer/: README.md
mine-sweeper/: README.md  README_#65.md-nu
mine-sweeper/rust/: Cargo.toml  Dockerfile  docker-conmpose.yaml
mine-sweeper/rust/src/: bomb_count.rs  main.rs  select_bomb_locations.rs
mine-sweeper/rust/src/board/: board_error.rs  board_properties.rs  cell_type.rs  mod.rs  mod_diplay.rs-nu
mine-sweeper/rust/src/game_rules/: mod.rs
rust/factorial/: Cargo.toml
rust/factorial/src/: main.rs
rust/fibonacci/: Cargo.toml
rust/fibonacci/src/: main.rs
url-shortener/: README.md
url-shortener/scala/: README.md  build.sbt
(+4 files in other folders)
